<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp" />
    <item
        android:id="@+id/navigation_export"
        android:title="Analytics"
        android:icon="@drawable/ic_show_chart_black_24dp"
        />
    <item
        android:id="@+id/navigation_import"
        android:title="@string/importvalue"
        android:icon="@drawable/ic_file_upload_black_24dp" />
    <item
        android:id="@+id/navigation_budget"
        android:title="@string/budget"
        android:icon="@drawable/ic_monetization_on_black_24dp"/>
    <item
        android:id="@+id/navigation_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"/>

</menu>